Add custom recipe builder backend